<resources>
    <string name="app_name">MOV</string>
    <string name="lewati">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfile yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="masuk">Masuk Akun</string>
    <string name="daftar">Daftar Akun Baru</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome,\nNovaldi Yudia</string>
    <string name="upload">Upload Nanti</string>
    <string name="simpan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="top_up_saldo">Top Up Saldo</string>
    <string name="my_history">My History</string>
    <string name="happy_watch">Happy Watching!</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="quick_options">Quick Options:</string>
    <string name="top_up_sekarang">Top Up Sekarang</string>
    <string name="e_wallet_desc">E-wallet telah berhasil\nuntuk diperbarui</string>
    <string name="e_wallet_title">You got it!</string>
    <string name="lihat_wallet">Lihat Wallet</string>
</resources>